--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "parse the test anything protocol",
   "main": "index.js",
   "dependencies": {
-    "inherits": "~2.0.1"
+    "inherits": "~2.0.1",
+    "readable-stream": "~1.0.25"
   },
   "devDependencies": {
     "tape": "~2.3.2",
@@ -17,8 +18,10 @@
     "files": "test/*.js",
     "browsers": [
       "ie/6..latest",
-      "chrome/10", "chrome/latest",
-      "firefox/3.5", "firefox/latest",
+      "chrome/10",
+      "chrome/latest",
+      "firefox/3.5",
+      "firefox/latest",
       "opera/latest",
       "safari/latest"
     ]
