--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "inherits": "~2.0.1",
-    "readable-stream": "~1.1.11"
+    "readable-stream": "~1.1.11",
+    "js-yaml": "^3.0.2"
   },
   "devDependencies": {
     "tape": "~2.3.2",
