--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
     "email": "mail@substack.net",
     "url": "http://substack.net"
   },
+  "contributors": {
+    "name": "Louis Acresti",
+    "email": "louis.acresti@gmail.com",
+    "url": "http://namuol.github.io"
+  },
   "license": "MIT"
 }
