--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tap-parser",
-  "version": "1.3.1",
+  "version": "1.2.2",
   "description": "parse the test anything protocol",
   "main": "index.js",
   "bin": {
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "events-to-array": "^1.0.1",
+    "inherits": "~2.0.1",
     "js-yaml": "^3.2.7"
   },
   "devDependencies": {
-    "glob": "^7.0.5",
-    "tap": "^6.3.0"
+    "glob": "^5.0.2",
+    "tap": "^1.2.0",
+    "tape": "^3.5.0"
   },
   "scripts": {
-    "test": "tap test/*.js --cov",
-    "regen-fixtures": "node scripts/generate-test.js test/fixtures/*.tap"
+    "test": "tap test/*.js"
   },
   "testling": {
     "files": "test/*.js",
