--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tap-parser": "bin/cmd.js"
   },
   "dependencies": {
+    "command-line-args": "^5.0.2",
     "events-to-array": "^1.0.1",
     "js-yaml": "^3.2.7",
     "minipass": "^2.2.0"
